changed contact us

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					</li> 
 					<li class="last ">
 						<a href="contact.html"> 
-							<span class="title">Contactus</span>
+							<span class="title">Contact  US</span>
 						</a>
 					</li>
 				</ul>
